--- a/sinfo/entidades/entidades.csproj
+++ b/sinfo/entidades/entidades.csproj
@@ -196,6 +196,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Areas\CodigoPolicia\CodigoPoliciaAreaRegistration.cs" />
+    <Compile Include="Areas\Conocimiento\ConocimientoAreaRegistration.cs" />
     <Compile Include="Areas\ServicioWeb\ServicioWebAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -2317,6 +2318,7 @@
     <Content Include="Content\bootstrap-daterangepicker\example\browserify\README.md" />
     <Content Include="Content\bootstrap-daterangepicker\package.json" />
     <Content Include="Content\bootstrap-daterangepicker\README.md" />
+    <Content Include="Areas\Conocimiento\Views\web.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -2369,6 +2371,9 @@
     <Folder Include="Areas\CodigoPolicia\Controllers\" />
     <Folder Include="Areas\CodigoPolicia\Models\" />
     <Folder Include="Areas\CodigoPolicia\Views\Shared\" />
+    <Folder Include="Areas\Conocimiento\Controllers\" />
+    <Folder Include="Areas\Conocimiento\Models\" />
+    <Folder Include="Areas\Conocimiento\Views\Shared\" />
     <Folder Include="Areas\ServicioWeb\Controllers\" />
     <Folder Include="Areas\ServicioWeb\Models\" />
     <Folder Include="Areas\ServicioWeb\Views\Shared\" />
